<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECDDFB"
    tools:context=".Caesar_Cipher_Act_5">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#F69393"
        android:gravity="center"
        android:text="@string/caesar"
        android:textColor="@color/design_default_color_primary"
        android:textSize="28sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/text_View_1"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_margin="15sp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Edit_text_1"
        android:inputType="text"
        android:textSize="23sp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et1"
        android:layout_margin="15sp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/shiftKey_enc"
        android:inputType="number"
        android:textSize="23sp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:gravity="center"
        android:text="@string/text_View_2"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/bt1"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_View_3"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_margin="15sp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Edit_text_3"
        android:inputType="text"
        android:textSize="23sp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et3"
        android:layout_margin="15sp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/shiftKey_dec"
        android:inputType="number"
        android:textSize="23sp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et4"
        android:gravity="center"
        android:text="@string/text_View_4"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/bt2"
        android:textSize="26sp" />

</RelativeLayout>