<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/im"
        android:layout_alignParentTop="true"
        android:layout_width="370dp"
        android:layout_height="320dp"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/ed1"
        android:layout_below="@+id/im"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />
    <Button
        android:id="@+id/send"
        android:layout_below="@+id/im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:onClick="onSend"
        android:text="@string/send"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/ed1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="5"/>

    <ListView
        android:id="@+id/lv"
        android:layout_below="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:background="#FAF090"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />
    <Button
        android:id="@+id/btnlast"
        android:text="Add Notes to Notepad"
        android:textSize="19dp"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"/>

</RelativeLayout>